examples/minikube/sw_deny_fqdn-wttr.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fqdn-wttrsw_deny_fqdn-wttr.yaml"
spec:
  endpointSelector:
    matchLabels:
      org: alliance
      class: curlpod
  egress:
    - toFQDNs:
        - matchName: "wttr.in"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
